Add htmls and footer animation

--- a/third.html
+++ b/third.html
@@ -7,11 +7,11 @@
     <title>CSS Layout</title>
   </head>
   <body>
-    <main>Index</main>
+    <main>Third</main>
     <footer class="bottom-nav">
-      <a href="#"><button class="bottom-nav__button active">📒</button></a>
+      <a href="index.html"><button class="bottom-nav__button">📒</button></a>
       <a href="second.html"><button class="bottom-nav__button">🛠</button></a>
-      <a href="third.html"><button class="bottom-nav__button">👋</button></a>
+      <a href="#"><button class="bottom-nav__button active">👋</button></a>
     </footer>
   </body>
 </html>
