--- a/second.html
+++ b/second.html
@@ -7,10 +7,10 @@
     <title>CSS Layout</title>
   </head>
   <body>
-    <main>Index</main>
+    <main>Second</main>
     <footer class="bottom-nav">
-      <a href="#"><button class="bottom-nav__button active">📒</button></a>
-      <a href="second.html"><button class="bottom-nav__button">🛠</button></a>
+      <a href="index.html"><button class="bottom-nav__button">📒</button></a>
+      <a href="#"><button class="bottom-nav__button active">🛠</button></a>
       <a href="third.html"><button class="bottom-nav__button">👋</button></a>
     </footer>
   </body>
