Applied bem to all elements

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CSS Layout</title>
   </head>
-  <body>
+  <body class="body">
     <main>Index</main>
     <footer class="bottom-nav">
-      <a href="#"><button class="bottom-nav__button active">📒</button></a>
+      <a href="#"
+        ><button class="bottom-nav__button bottom-nav__button-active">
+          📒
+        </button></a
+      >
       <a href="second.html"><button class="bottom-nav__button">🛠</button></a>
       <a href="third.html"><button class="bottom-nav__button">👋</button></a>
     </footer>
