--- a/third.html
+++ b/third.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CSS Layout</title>
   </head>
-  <body>
+  <body class="body">
     <main>Third</main>
     <footer class="bottom-nav">
       <a href="index.html"><button class="bottom-nav__button">📒</button></a>
       <a href="second.html"><button class="bottom-nav__button">🛠</button></a>
-      <a href="#"><button class="bottom-nav__button active">👋</button></a>
+      <a href="#"
+        ><button class="bottom-nav__button bottom-nav__button-active">
+          👋
+        </button></a
+      >
     </footer>
   </body>
 </html>
