--- a/second.html
+++ b/second.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CSS Layout</title>
   </head>
-  <body>
+  <body class="body">
     <main>Second</main>
     <footer class="bottom-nav">
       <a href="index.html"><button class="bottom-nav__button">📒</button></a>
-      <a href="#"><button class="bottom-nav__button active">🛠</button></a>
+      <a href="#"
+        ><button class="bottom-nav__button bottom-nav__button-active">
+          🛠
+        </button></a
+      >
       <a href="third.html"><button class="bottom-nav__button">👋</button></a>
     </footer>
   </body>
